--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
 <style>
 body {
-  background-image: url("images/HomePage.png");
+  background-image: url('images/HomePage.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
 }
 </style>
 </head>
 <body>
+
 
 </body>
 </html>
