--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@ body {
   background-size: cover;
 }
 </style>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MP6FDMC31N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MP6FDMC31N');
+</script>
+
 </head>
 <body>
 
