--- a/index.html
+++ b/index.html
@@ -1,28 +1,60 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 <html>
 <head>
+<title>CSS3 Animated Hover Effect</title>
+
+<link href="style.css" rel="stylesheet" type="text/css">
+  
 <style>
-body {
-  background-image: url('images/HomePage.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
-  background-size: cover;
-}
-</style>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MP6FDMC31N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-MP6FDMC31N');
-</script>
-
+	body {
+	  background-image: url('HomePage.png');
+	  background-repeat: no-repeat;
+	  background-attachment: fixed;  
+	  background-size: cover;
+	}
+	</style>
 </head>
+
 <body>
 
 
+
+		
+	<div class="fallingLeaves">
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	
+	
+	</div>
+	
+</div>
+
 </body>
+
 </html>
