--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
+B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 <html>
 <head>
-<title>CSS3 Animated Hover Effect</title>
 
 <link href="style.css" rel="stylesheet" type="text/css">
   
 <style>
 	body {
-	  background-image: url('HomePage.png');
+	  background-image: url('Home.png');
 	  background-repeat: no-repeat;
 	  background-attachment: fixed;  
 	  background-size: cover;
@@ -16,9 +15,16 @@
 </head>
 
 <body>
-
-
-
+	<nav>
+		<img class="logo-img" src="MW.png" width="45" height="45" alt="MW" ALIGN=CENTER>
+		<img class="HeaderTitle" src="MWHeaderTitle.png" width="777" height="52" alt="Monique Winters" ALIGN=CENTER>
+		<ul>
+			<li><a herf ="#">About Me</a></li>
+			<li><a herf ="https://drive.google.com/file/d/1-A72OEBHJEPtsViE8e0LGM7S8Fn-RfgQ/view?usp=share_link">Resume</a></li>
+			<li><a herf ="https://www.linkedin.com/in/moniquewintersdesign/">LinkedIn</a></li>
+		</ul>
+	</nav>
+	<section></section>
 		
 	<div class="fallingLeaves">
 		<span></span>
@@ -55,6 +61,334 @@
 	
 </div>
 
+
 </body>
+
+<!doctype html>
+<html lang="en">
+  <head>
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
+</html>
+
+<h1>PROJECTS</h1>
+
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+	<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+	  <ol class="carousel-indicators">
+		<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+		<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+		<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+	  </ol>
+	  <div class="carousel-inner">
+		<div class="carousel-item active">
+			<div class="d-flex justify-content-center">
+		  		<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Greenies.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Greenies Eco Friendly App</h5>
+						  <p class="card-text">Now, what is Greenies? This project began with our group's interest in the cosmetics and beauty industry. Particularly in eco-friendly beauty products and green-washing.</p>
+						  <a href="https://docs.google.com/presentation/d/1uUx7WIXaSPsk9INjo6RS39XCn1ai50wQNaRLTl5E_Uw/edit?usp=share_link" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Yolo.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Yolo Travel Budget App</h5>
+						  <p class="card-text">The travel app that keeps you on budget while you enjoy the rest. "To travel is to live and You Only Live Once"</p>
+						  <a href="https://docs.google.com/presentation/d/17INoCP18tGVddmBhFC73DU3GYth_9k9m/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="SpaceCadet.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">SpaceCadet Office Space</h5>
+						  <p class="card-text">The SpaceCadet app was created to help our users find available office space rentals that fits our users needs.</p>
+						  <a href="https://docs.google.com/presentation/d/185_tjhBhYrPD54PKTuvF0PAvfgo9q2Ox/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+		<div class="carousel-item">
+			<div class="d-flex justify-content-center">
+		  		<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Greenies-UserPersona.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Greenies User Persona</h5>
+						  <p class="card-text">Cassidy is eco-mindful. She knows that the climate issue is looming over her generation so she feels the obligation to make smarter decisions around her consumerist practices. </p>
+						  <a href="https://docs.google.com/presentation/d/1uUx7WIXaSPsk9INjo6RS39XCn1ai50wQNaRLTl5E_Uw/edit?usp=share_link" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Yolo-Prioritization Matrix.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">YOLO Prioritization Matrix</h5>
+						  <p class="card-text">My Feature Prioritization Chart here explains the stragegies which helped me determine the app features and each priority demands so I could have a better idea on which features to use and others I could toss.</p>
+						  <a href="https://docs.google.com/presentation/d/17INoCP18tGVddmBhFC73DU3GYth_9k9m/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="SpaceCadet-Project.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">SpaceCadet User Insight/Problem</h5>
+						  <p class="card-text">Users are looking for a quick and convenient find rental spaces to host pop-up events for their small businesses. It is very hard to find an available space that meets the users need.</p>
+						  <a href="https://docs.google.com/presentation/d/185_tjhBhYrPD54PKTuvF0PAvfgo9q2Ox/edit?usp=sharing&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+		<div class="carousel-item">
+			<div class="d-flex justify-content-center">
+				<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Greenies-UsabilityTest.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Greenies Usability Test</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="https://docs.google.com/presentation/d/1uUx7WIXaSPsk9INjo6RS39XCn1ai50wQNaRLTl5E_Uw/edit?usp=share_link" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Yolo-Mockups.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Yolo Mockups</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="https://docs.google.com/presentation/d/17INoCP18tGVddmBhFC73DU3GYth_9k9m/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="SpaceCadet-Wireframe.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">SpaceCadet Wireframe</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="https://docs.google.com/presentation/d/185_tjhBhYrPD54PKTuvF0PAvfgo9q2Ox/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+  	</div>
+	  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	  </a>
+	</div>
+</div>
+
+  <h1>EXPERIENCE</h1>
+
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+	<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+	  <ol class="carousel-indicators">
+		<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+		<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+		<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+	  </ol>
+	  <div class="carousel-inner">
+		<div class="carousel-item active">
+			<div class="d-flex justify-content-center">
+		  		<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Salt & Light Path</h5>
+						  <p class="card-text">Currently </p>
+						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="The Winters Challenge.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Winters Challenge</h5>
+						  <p class="card-text">Maintinging the Winters Challenge website and completing research for ways to improve and redesign for better service and scheduling purposes.</p>
+						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="IMVU-3.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">IMVU</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="#" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+		<div class="carousel-item">
+			<div class="d-flex justify-content-center">
+		  		<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Salt & Light Path</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="The Winters Challenge.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Winters Challenge</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="IMVU-3.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">IMVU</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="#" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+		<div class="carousel-item">
+			<div class="d-flex justify-content-center">
+				<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Salt & Light Path</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="The Winters Challenge.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Winters Challenge</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="IMVU-3.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">IMVU</h5>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <a href="#" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	  </a>
+	</div>
+  </div>
+
+  <h1>COMING SOON!!!</h1>
+
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+	<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+	  <ol class="carousel-indicators">
+		<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+		<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+		<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+	  </ol>
+	  <div class="carousel-inner">
+		<div class="carousel-item active">
+			<div class="d-flex justify-content-center">
+		  		<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Salt & Light Path App</h5>
+						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
+						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="The Winters Challenge App.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Winters Challenge App</h5>
+						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other challenges that are available.</p>
+						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+		<div class="carousel-item">
+			<div class="d-flex justify-content-center">
+		  		<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path App-transparent.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Salt & Light Path App</h5>
+						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
+						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="The Winters Challenge App.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Winters Challenge App</h5>
+						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other challenges that are available.</p>
+						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+		<div class="carousel-item">
+			<div class="d-flex justify-content-center">
+				<div class="cards-wrapper">
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path App-transparent.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Salt & Light Path App</h5>
+						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events for raise money for the poor, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
+						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="The Winters Challenge App.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Winters Challenge App</h5>
+						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other fun challenges that are available that will help raise money for the poor.</p>
+						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+				</div>
+		  	</div>
+		</div>
+	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	  </a>
+	</div>
+  </div>
 
 </html>
