--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 		<img class="HeaderTitle" src="MWHeaderTitle.png" width="777" height="52" alt="Monique Winters" ALIGN=CENTER>
 		<ul>
 			<li><a herf ="#">About Me</a></li>
-			<li><a herf ="https://drive.google.com/file/d/1-A72OEBHJEPtsViE8e0LGM7S8Fn-RfgQ/view?usp=share_link">Resume</a></li>
+			<li><a herf ="https://drive.google.com/file/d/1-A72OEBHJEPtsViE8e0LGM7S8Fn-RfgQ/view?usp=sharing">Resume</a></li>
 			<li><a herf ="https://www.linkedin.com/in/moniquewintersdesign/">LinkedIn</a></li>
 		</ul>
 	</nav>
@@ -209,7 +209,7 @@ B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 						<div class="card-body">
 						  <h5 class="card-title">Salt & Light Path</h5>
 						  <p class="card-text">Currently </p>
-						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
@@ -239,7 +239,7 @@ B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 						<div class="card-body">
 						  <h5 class="card-title">Salt & Light Path</h5>
 						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
@@ -265,11 +265,11 @@ B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 			<div class="d-flex justify-content-center">
 				<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
+						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">Salt & Light Path</h5>
 						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
@@ -321,7 +321,7 @@ B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 						<div class="card-body">
 						  <h5 class="card-title">The Salt & Light Path App</h5>
 						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
-						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
@@ -339,11 +339,11 @@ B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 			<div class="d-flex justify-content-center">
 		  		<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path App-transparent.png" class="card-img-top" alt="...">
+						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">Salt & Light Path App</h5>
 						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
-						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
@@ -361,11 +361,11 @@ B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 			<div class="d-flex justify-content-center">
 				<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path App-transparent.png" class="card-img-top" alt="...">
+						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">Salt & Light Path App</h5>
 						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events for raise money for the poor, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
-						  <a href="saltandlightpath.com" class="btn btn-primary">Go</a>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
