--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 <html>
 <head>
 
@@ -15,16 +15,28 @@ B<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 //EN">
 </head>
 
 <body>
-	<nav>
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #454238;">
 		<img class="logo-img" src="MW.png" width="45" height="45" alt="MW" ALIGN=CENTER>
 		<img class="HeaderTitle" src="MWHeaderTitle.png" width="777" height="52" alt="Monique Winters" ALIGN=CENTER>
-		<ul>
-			<li><a herf ="#">About Me</a></li>
-			<li><a herf ="https://drive.google.com/file/d/1-A72OEBHJEPtsViE8e0LGM7S8Fn-RfgQ/view?usp=sharing">Resume</a></li>
-			<li><a herf ="https://www.linkedin.com/in/moniquewintersdesign/">LinkedIn</a></li>
-		</ul>
-	</nav>
-	<section></section>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+		  <ul class="navbar-nav">
+			<li class="nav-item active">
+			<li class="nav-item dropdown">
+			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			  <img class="HamburgerMenuBar" src="Hamburger Menu Bar.png" width="38" height="25" alt="DropDown" ALIGN=RIGHT>
+			  </a>
+			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+				<a class="dropdown-item" href="#">About Me</a>
+				<a class="dropdown-item" href="https://drive.google.com/file/d/1-A72OEBHJEPtsViE8e0LGM7S8Fn-RfgQ/view?usp=share_link">Resume</a>
+				<a class="dropdown-item" href="https://www.linkedin.com/in/moniquewintersdesign/">LinkedIn</a>
+			  </div>
+			</li>
+		  </ul>
+		</div>
+	  </nav>
 		
 	<div class="fallingLeaves">
 		<span></span>
