--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	</style>
 </head>
 
-<body>
 	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #454238;">
 		<img class="logo-img" src="MW.png" width="45" height="45" alt="MW" ALIGN=CENTER>
 		<img class="HeaderTitle" src="MWHeaderTitle.png" width="777" height="52" alt="Monique Winters" ALIGN=CENTER>
@@ -30,14 +29,15 @@
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" href="#">About Me</a>
-				<a class="dropdown-item" href="https://drive.google.com/file/d/1-A72OEBHJEPtsViE8e0LGM7S8Fn-RfgQ/view?usp=share_link">Resume</a>
+				<a class="dropdown-item" href="https://drive.google.com/file/d/1LUMuMxYMcMJGZeahXQcPENzN3b3eCGwa/view?usp=sharing">Resume</a>
 				<a class="dropdown-item" href="https://www.linkedin.com/in/moniquewintersdesign/">LinkedIn</a>
 			  </div>
 			</li>
 		  </ul>
 		</div>
 	  </nav>
-		
+	
+
 	<div class="fallingLeaves">
 		<span></span>
 		<span></span>
