--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<div class="card-body">
 						  <h5 class="card-title">Greenies Eco Friendly App</h5>
 						  <p class="card-text">Now, what is Greenies? This project began with our group's interest in the cosmetics and beauty industry. Particularly in eco-friendly beauty products and green-washing.</p>
-						  <a href="https://docs.google.com/presentation/d/1uUx7WIXaSPsk9INjo6RS39XCn1ai50wQNaRLTl5E_Uw/edit?usp=share_link" class="btn btn-primary">Go</a>
+						  <a href="https://www.figma.com/proto/rRLUMdmsDPIfec1gzRJOxb/Greenies?page-id=206%3A2286&node-id=206%3A2286&viewport=832%2C572%2C0.17&scaling=scale-down&starting-point-node-id=206%3A2514" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
@@ -117,7 +117,7 @@
 						<div class="card-body">
 						  <h5 class="card-title">Yolo Travel Budget App</h5>
 						  <p class="card-text">The travel app that keeps you on budget while you enjoy the rest. "To travel is to live and You Only Live Once"</p>
-						  <a href="https://docs.google.com/presentation/d/17INoCP18tGVddmBhFC73DU3GYth_9k9m/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						  <a href="https://www.figma.com/proto/xblDQhITiyPSlY8QwmI5n2/YOLO-Travel-Budget-App?page-id=502%3A324&node-id=502%3A328&starting-point-node-id=502%3A325" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
@@ -125,7 +125,7 @@
 						<div class="card-body">
 						  <h5 class="card-title">SpaceCadet Office Space</h5>
 						  <p class="card-text">The SpaceCadet app was created to help our users find available office space rentals that fits our users needs.</p>
-						  <a href="https://docs.google.com/presentation/d/185_tjhBhYrPD54PKTuvF0PAvfgo9q2Ox/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						  <a href="https://www.figma.com/proto/EncYKRxuV2X4eKLE6epTus/Fighting-Mongooses?page-id=267%3A758&node-id=267%3A759&viewport=689%2C464%2C0.24&scaling=scale-down&starting-point-node-id=267%3A921" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
@@ -135,10 +135,10 @@
 			<div class="d-flex justify-content-center">
 		  		<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Greenies-UserPersona.png" class="card-img-top" alt="...">
+						<img src="Greenies - Special Features.gif" class="card-img-top" alt="...">
 						<div class="card-body">
-						  <h5 class="card-title">Greenies User Persona</h5>
-						  <p class="card-text">Cassidy is eco-mindful. She knows that the climate issue is looming over her generation so she feels the obligation to make smarter decisions around her consumerist practices. </p>
+						  <h5 class="card-title">Greenies Special Features</h5>
+						  <p class="card-text">Responsible for creating and designing special features for the Greenies App</p>
 						  <a href="https://docs.google.com/presentation/d/1uUx7WIXaSPsk9INjo6RS39XCn1ai50wQNaRLTl5E_Uw/edit?usp=share_link" class="btn btn-primary">Go</a>
 						</div>
 					</div>
@@ -167,8 +167,8 @@
 					<div class="card" style="width: 18rem;">
 						<img src="Greenies-UsabilityTest.png" class="card-img-top" alt="...">
 						<div class="card-body">
-						  <h5 class="card-title">Greenies Usability Test</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <h5 class="card-title">Greenies Usability Testing</h5>
+						  <p class="card-text">We used UsabilityHub and created two 5 second questions to gain user insight. After a 5 sec viewing of the image, we asked users what stood out. Then asked them to click where they would go to find more product information. The image on the right is the heat map of where users clicked.</p>
 						  <a href="https://docs.google.com/presentation/d/1uUx7WIXaSPsk9INjo6RS39XCn1ai50wQNaRLTl5E_Uw/edit?usp=share_link" class="btn btn-primary">Go</a>
 						</div>
 					</div>
