--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<div class="card-body">
 						  <h5 class="card-title">Yolo Travel Budget App</h5>
 						  <p class="card-text">The travel app that keeps you on budget while you enjoy the rest. "To travel is to live and You Only Live Once"</p>
-						  <a href="https://www.figma.com/proto/xblDQhITiyPSlY8QwmI5n2/YOLO-Travel-Budget-App?page-id=502%3A324&node-id=502%3A328&starting-point-node-id=502%3A325" class="btn btn-primary">Go</a>
+						  <a href="https://docs.google.com/presentation/d/17INoCP18tGVddmBhFC73DU3GYth_9k9m/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
@@ -125,7 +125,7 @@
 						<div class="card-body">
 						  <h5 class="card-title">SpaceCadet Office Space</h5>
 						  <p class="card-text">The SpaceCadet app was created to help our users find available office space rentals that fits our users needs.</p>
-						  <a href="https://www.figma.com/proto/EncYKRxuV2X4eKLE6epTus/Fighting-Mongooses?page-id=267%3A758&node-id=267%3A759&viewport=689%2C464%2C0.24&scaling=scale-down&starting-point-node-id=267%3A921" class="btn btn-primary">Go</a>
+						  <a href="https://docs.google.com/presentation/d/185_tjhBhYrPD54PKTuvF0PAvfgo9q2Ox/edit?usp=sharing&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
@@ -176,16 +176,16 @@
 						<img src="Yolo-Mockups.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">Yolo Mockups</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="https://docs.google.com/presentation/d/17INoCP18tGVddmBhFC73DU3GYth_9k9m/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						  <p class="card-text">Please visit my Hi-Fidality Prototype link here.</p>
+						  <a href="https://www.figma.com/proto/xblDQhITiyPSlY8QwmI5n2/YOLO-Travel-Budget-App?page-id=502%3A324&node-id=502%3A328&starting-point-node-id=502%3A325&scaling=scale-down" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
 						<img src="SpaceCadet-Wireframe.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">SpaceCadet Wireframe</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="https://docs.google.com/presentation/d/185_tjhBhYrPD54PKTuvF0PAvfgo9q2Ox/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
+						  <p class="card-text">Please visit our Mid-Fi Wireframe Prototype link here.</p>
+						  <a href="https://www.figma.com/proto/EncYKRxuV2X4eKLE6epTus/Fighting-Mongooses?page-id=267%3A758&node-id=267%3A759&viewport=689%2C464%2C0.24&scaling=scale-down&starting-point-node-id=267%3A921" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
