--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 						<img src="Greenies - Special Features.gif" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">Greenies Special Features</h5>
-						  <p class="card-text">Responsible for creating and designing special features for the Greenies App</p>
-						  <a href="https://docs.google.com/presentation/d/1uUx7WIXaSPsk9INjo6RS39XCn1ai50wQNaRLTl5E_Uw/edit?usp=share_link" class="btn btn-primary">Go</a>
+						  <p class="card-text">Responsible for creating and designing special features for the Greenies App such as the Product Scanner and the Star Rating Tool.</p>
+						  <a href="https://www.figma.com/proto/rRLUMdmsDPIfec1gzRJOxb/Greenies?page-id=206%3A2286&node-id=206%3A2286&viewport=832%2C572%2C0.17&scaling=scale-down&starting-point-node-id=206%3A2514" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
